# PNet

PNet/Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  MyClient.cpp  MyClient.h  Source.cpp
PNet/PNet/: Client.cpp  Client.h  Constants.h  Helpers.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeMe.h  Network.cpp  Network.h  PNet.sln  PNet.vcxproj  PNet.vcxproj.filters  PResult.h  Packet.cpp  Packet.h  PacketException.h  PacketManager.cpp  PacketManager.h  PacketProcessingResult.h  PacketType.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketHandle.h  SocketOption.h  Source.cpp  TCPConnection.cpp  TCPConnection.h  TextPacket.cpp  TextPacket.h  TextPacketManager.cpp  TextPacketManager.h  Timer.cpp  Timer.h
PNet/PNet/Client/: Source.cpp
PNet/PNet/Server/: Server.vcxproj  Source.cpp
PNet/Server/: Account.cpp  Account.h  MyServer.cpp  MyServer.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Source.cpp
src/: CMakeLists.txt
src/Client/: Client.vcxproj  Source.cpp
src/PNet/: Constants.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeMe.h  Network.cpp  Network.h  PResult.h  Packet.cpp  Packet.h  PacketType.h  Socket.cpp  SocketHandle.h  SocketOption.h
src/Server/: Source.cpp
